--- a/resources/scss/blocks/core/_media-text.scss
+++ b/resources/scss/blocks/core/_media-text.scss
@@ -16,6 +16,18 @@
 		"resizer resizer";
 	grid-template-columns: 50% auto;
 
+	&.is-vertically-aligned-top {
+		align-items: start;
+	}
+
+	&.is-vertically-aligned-center {
+		align-items: center;
+	}
+
+	&.is-vertically-aligned-bottom {
+		align-items: end;
+	}
+
 	@media ( max-width: $content-width ) {
 		padding: 0 $spacing-global;
 	}
